--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-flip-card": "^3.5.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
