--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-sound": "^0.11.2",
     "react-native-web": "~0.19.6",
-    "expo-linear-gradient": "~12.7.2"
+    "expo-linear-gradient": "~12.7.2",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
